# enterprise-level-software

./: .env.dev  .env.prod  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.etl  Dockerfile.jenkins  Dockerfile.jenkins-agent  GEMINI.md  Jenkinsfile  LICENSE.txt  README.md  dev.env  docker-compose.yaml  get_runs.py  job_config.xml  job_config_flexible.xml  job_config_master.xml  nx.json  package-lock.json  package.json  prod.env  pyproject.toml  template.dev.env  template.env.dev  template.env.prod  template.prod.env
.prefect/: profiles.toml
apps/etl-service/: README.md  project.json  pyproject.toml
apps/etl-service/data/dev/intraday/symbol=TSLA.US/bus_date=2026-04-29/: 95c44cc79d7644fd80a3c994e8ba7d84-0.parquet
apps/etl-service/src/etl_service/: main.py
apps/etl-service/src/etl_service/etl/: deploy_etls.py  serve_etls.py
apps/etl-service/src/etl_service/etl/deployments_settings/: deps_utils.py  enums.py  job_variables.py  mapper.py  settings.py
apps/etl-service/src/etl_service/etl/deployments_settings/deployments/: base.py
apps/etl-service/src/etl_service/etl/deployments_settings/deployments/stocks/: bulk.py  date_range.py  economic.py  eod.py  exchanges.py  fundamentals.py  intraday.py  macro.py  main.py  news.py  technical.py  tickers.py
apps/etl-service/src/etl_service/etl/flows/: locator.py  utils.py
apps/etl-service/src/etl_service/etl/flows/etl/: bulk_data.py  date_range.py  economic.py  eod.py  exchanges.py  fundamentals.py  intraday.py  macro.py  main.py  news.py  technical.py  tickers.py
apps/etl-service/src/etl_service/etl/flows/models/: bulk.py  economic.py  eod.py  fundamentals.py  macro.py  news.py  technical.py
apps/etl-service/src/etl_service/etl/scripts/: bulk.py  economic.py  eod.py  exchanges.py  fundamentals.py  intraday.py  macro.py  news.py  technical.py  tickers.py
apps/etl-service/tests/: test_etl_service.py
apps/prefect-orchestrator/: README.md  check_settings.py  project.json  pyproject.toml
docs/: architecture  index.md  security
docs/api/: eodhd-client.md  overview.md
docs/architecture/: adr-001-single-prefect-cluster.md  adr-002-hybrid-storage-strategy.md
docs/database/: parquet.md  sql-vs-nosql.md  timescaledb.md
docs/infrastructure/: docker.md  jenkins.md  kubernetes.md  multi-tenancy.md
docs/orchestration/: prefect-overview.md  prefect.md  setup-guide.md
docs/python/: overview.md  patterns.md
docs/quality/: environment-parity.md  testing.md
docs/security/: secret-management.md
docs/source-control/: git.md  github.md
docs/tooling/: nx-uv.md  pydantic-settings.md
libs/db-client/: README.md  project.json  pyproject.toml  stocks.sql
libs/db-client/src/: stocks.sql
libs/db-client/src/db_client/: __init__.py  client.py
libs/db-client/src/db_client/models/: __init__.py  create_tables.py  economic.py  fundamentals.py  macro.py  news.py  stocks.py  stocks.sql
libs/db-client/tests/: test_db_client.py
libs/eodhd-client/: README.md  project.json  pyproject.toml  verify_endpoints.py
libs/eodhd-client/src/eodhd_client/: __init__.py  bulk_client.py  client.py  economic_client.py  endpoint_cost.py  eod_exceptions.py  exchanges_client.py  fundamentals_client.py  news_client.py  rate_limiter.py  real_time_client.py  search_client.py  stocks_etf_client.py  technical_indicator_client.py
libs/eodhd-client/src/eodhd_client/examples/: main_exchanges_client.py  main_stocks_etf_client.py
libs/eodhd-client/tests/: test_eodhd_client.py
libs/storage-client/: project.json  pyproject.toml
libs/storage-client/src/storage_client/: __init__.py  parquet.py
libs/storage-client/tests/: test_parquet.py
pull_requests/: PR-1.md  PR-10.md  PR-11.md  PR-12.md  PR-13.md  PR-14.md  PR-15.md  PR-17.md  PR-2.md  PR-3.md  PR-4.md  PR-5.md  PR-6.md  PR-7.md  PR-8.md  PR-9.md
skills/: gh-pr-doc.skill
skills/docs-validator/: SKILL.md
skills/gh-pr-doc/: SKILL.md
tools/linter/: project.json  pyproject.toml
tools/linter/src/linter/: run_linters.py
tools/linter/tests/: test_linter.py
