[project]
name = "etl-service"
version = "0.1.0"
description = "An ETL service application"
authors = [{ name = "Stav", email = "stav3141@gmail.com" }]
requires-python = "==3.13.1"
dependencies = [
    "linter"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
linter = {path = "../../tools/linter", editable = true}