[project]
name = "etl-service"
version = "0.1.0"
description = "An ETL service application"
authors = [{ name = "Stav Yosef" }]
requires-python = "==3.13.1"
dependencies = [
    "linter",
    "db-client",
    "eodhd-client",
    "loguru>=0.7.3",
    "prefect==3.6.25",
    "pydantic-settings>=2.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
linter = {path = "../../tools/linter", editable = true}
db-client = {path = "../../libs/db-client", editable = true}
eodhd-client = {path = "../../libs/eodhd-client", editable = true}
