[project]
name = "prefect-orchestrator"
version = "0.1.0"
description = "Prefect Orchestration Application"
authors = [{ name = "Stav Yosef" }]
requires-python = "==3.13.1"
dependencies = [
    "linter",
    "prefect==3.6.25",
    "prefect-kubernetes==0.7.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
linter = {path = "../../tools/linter", editable = true}