[project]
name = "prefect-orchestrator"
version = "0.1.0"
description = "Prefect Orchestration Application"
authors = [{ name = "Stav Yosef" }]
requires-python = "==3.13.1"
dependencies = [
    "prefect==3.6.25",
    "prefect-kubernetes==0.7.7",
    "prefect-docker==0.7.1",
    "python-dotenv[cli]>=1.0.1",
    "asyncpg>=0.29.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
