[project]
name = "db-client"
version = "0.1.0"
description = "Database Client"
authors = [{ name = "Stav Yosef" }]
requires-python = "==3.13.1"
dependencies = [
    "linter",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.11"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
linter = {path = "../../tools/linter", editable = true}
