[project]
name = "eodhd-client"
version = "0.1.0"
description = "EODHD Client"
authors = [{ name = "Stav Yosef" }]
requires-python = "==3.13.1"
dependencies = [
    "linter",
    "db-client",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eodhd_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
linter = {path = "../../tools/linter", editable = true}
db-client = {path = "../../libs/db-client", editable = true}
