[project]
name = "storage-client"
version = "0.1.0"
description = "Abstract File Storage Client"
authors = [{ name = "Stav Yosef" }]
requires-python = "==3.13.1"
dependencies = [
    "loguru>=0.7.3",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storage_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
