[project]
name = "linter"
version = "0.1.0"
description = "A code linter tool"
authors = [{ name = "Stav", email = "stav3141@gmail.com" }]
requires-python = "==3.13.1"
dependencies = [
    "flake8>=7.2.0",
    "black>=25.1.0",
    "isort>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]